调整登录、调整权限分配
